Fix broken layout on Safari

--- a/test/stage1/style.css
+++ b/test/stage1/style.css
@@ -1,4 +1,5 @@
 .js-training {
+  display: -webkit-flex;
   display: flex;
   list-style: none;
   margin: 10px;
@@ -6,6 +7,7 @@
 }
 
 .js-training li {
+  -webkit-flex: 1;
   flex: 1;
   margin: 0;
   padding: 0;
@@ -31,6 +33,7 @@
 }
 
 .js-training .turquoise {
+  -webkit-flex: 0.5;
   flex: 0.5;
   background-color: turquoise;
 }
@@ -40,7 +43,7 @@
   margin: 0;
   height: 40px;
   font-weight: bold;
-  font-size: 130%;
+  font-size: 1;
 }
 
 .js-training [data-js-training="blueviolet"] {
@@ -60,6 +63,7 @@
 }
 
 .js-training .mediumturquoise {
+  -webkit-flex: 0.5;
   flex: 0.5;
   background-color: mediumturquoise;
 }
